--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+    <meta charset="utf-8" />
+    <title>Home</title>
+</head>
 <body style="background-color:MistyRose;">
 
 
